engine: fix background image on welcome and login pages
Apply the background image technique used in patternfly's login
page pattern to the welcome and login pages.  This change will
prevent the background image from being truncated if the welcome
or login page is made short enough to scroll.

Bug-Url: https://bugzilla.redhat.com/1347807

--- a/packaging/branding/ovirt.brand/common.css
+++ b/packaging/branding/ovirt.brand/common.css
@@ -123,20 +123,20 @@ popup windows, for instance for creating a new VM */
 
 /* LoginSectionView.ui.xml:
    background image */
-.obrand_loginPageBackground {
+.obrand_background {
+    height: 100%;
+}
+
+.obrand_background body {
     background-image: url(images/ovirt_bg.png);
     background-color: #282d33;
     background-size: auto;
     background-repeat: repeat-x;
     background-position: 50% 0;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    top: 0;
 }
+
 @media (min-width: 768px) {
-    .obrand_loginPageBackground {
+    .obrand_background body {
         background-size: 100% auto;
      }
 }
